syntax = "proto3";

option csharp_namespace = "WebApplication1";
import "google/api/annotations.proto";

package VideoCallDetail; 

service VideoCallDetail {
    rpc CreateVideoCallDetail (CreateVideoCallDetailRequest) returns (CreateVideoCallDetailResponse) {
        option (google.api.http) = {
            post: "/v1/videoCallDetail",
            body: "*"
        };
    }
    rpc ReadVideoCallDetail (ReadVideoCallDetailRequest) returns (ReadVideoCallDetailResponse) {
        option (google.api.http) = {
            get: "/v1/videoCallDetail/{id}"
        };
    }
    rpc UpdateVideoCallDetail (UpdateVideoCallDetailRequest) returns (UpdateVideoCallDetailResponse) {
        option (google.api.http) = {
            put : "/v1/videoCallDetail",
            body: "*"
        };
    }
    rpc DeleteVideoCallDetail (DeleteVideoCallDetailRequest) returns (DeleteVideoCallDetailResponse) {
        option (google.api.http) = {
            delete: "/v1/videoCallDetail/{id}"
        };
    
    }
    rpc GetAllVideoCallDetails (GetAllVideoCallDetailsRequest) returns (GetAllVideoCallDetailsResponse) {
        option (google.api.http) = {
            get: "/v1/videoCallDetails"
        
    };
}
}


message CreateVideoCallDetailRequest {
    string id = 1; 
    string applicant = 2;
    string recipient = 3;
    string status = 4;
    string room = 5; 
}

message CreateVideoCallDetailResponse {
    string id = 1; 
}

message ReadVideoCallDetailRequest {
    string id = 1;
}

message ReadVideoCallDetailResponse {
    string id = 1; 
    string applicant = 2;
    string recipient = 3;
    string status = 4;
    string room = 5; 
}

message UpdateVideoCallDetailRequest {
    string id = 1; 
    string applicant = 2;
    string recipient = 3;
    string status = 4;
    string room = 5; 
}

message UpdateVideoCallDetailResponse {
    string id = 1; 
}

message DeleteVideoCallDetailRequest {
    string id = 1; 
}

message DeleteVideoCallDetailResponse {
    string id = 1; 
}

message GetAllVideoCallDetailsRequest {}

message GetAllVideoCallDetailsResponse {
    repeated VideoCallDetailItem videoCallDetails = 1;
}

message VideoCallDetailItem {
    string id = 1; 
    string applicant = 2;
    string recipient = 3;
    string status = 4;
    string room = 5; 
}
